# CEMIRA-CogArch

./: .gitmodules  README.md
arm/: CMakeLists.txt  package.xml
arm/scripts/: arm_server.py  arm_server_init.sh  yumi_moveit_utils.py
arm/srv/: ArmInterface.srv
cemira/: CMakeLists.txt  package.xml
cemira/launch/: arm.launch  face_input.launch  face_output.launch  hand_input.launch
face_output/: CMakeLists.txt  package.xml
face_output/launch/: face_output.launch
face_output/scripts/: face_output_server.py  run_marytts.sh
face_output/srv/: FaceInterface.srv
head/: CMakeLists.txt  package.xml
head/launch/: head.launch  head_interface.launch
head/scripts/: head_access.sh  head_publisher.py  head_server.py
head/src/: head_publisher.py  head_server.py
head/srv/: HeadInterface.srv
init/: CMakeLists.txt  package.xml
init/launch/: system_init.launch
init/src/: arm_server_init.sh  leap_init.sh
leap/: CMakeLists.txt  package.xml
leap/hand_svm/: hand.model  hand.t
leap/launch/: leap.launch
leap/src/: leap_predictor.cpp  leap_sampler.cpp  leap_viewer.cpp
object_rec/: CMakeLists.txt  package.xml
object_rec/data/: cube.pcd  cuboid.pcd  cylinder.pcd
object_rec/launch/: normal_filter.launch  object_rec.launch  object_recognition_with_plane.launch
object_rec/script/: object_rec.sh
opencv_apps/launch/: corner_harris.launch  edge_detection.launch  find_contours.launch  hough_circles.launch  hough_lines.launch  segment_objects.launch
vision/: CMakeLists.txt  package.xml
vision/config/: tabletop.rviz
vision/data/: cube.pcd  cube2.pcd  (+4 more)
(+8 files in other folders)
